test/corpus/sieve.txt
==========
埃氏篩
==========

吾有一術。名之曰「埃氏篩」。欲行是術。必先得一數。曰「甲」。乃行是術曰。
	吾有一列。名之曰「掩」。為是「甲」遍。充「掩」以陽也。
	除「甲」以二。名之曰「甲半」。

	有數二。名之曰「戊」。恆為是。若「戊」等於「甲半」者乃止也。
		有數二。名之曰「戌」。恆為是。若「戌」等於「甲半」者乃止也。

			乘「戊」以「戌」。名之曰「合」
			若「合」不大於「甲」者。
				昔之「掩」之「合」者。今陰是矣。
			若非乃止也。
		加一以「戌」。昔之「戌」者。今其是矣云云。
	加一以「戊」。昔之「戊」者。今其是矣云云。

	吾有一列。名之曰「諸素」。
	昔之「戊」者。今二是矣。恆為是。若「戊」等於「掩」之長者乃止也。
		夫「掩」之「戊」。名之曰「素耶」。
		若「素耶」者充「諸素」以「戊」也。
	加一以「戊」。昔之「戊」者。今其是矣云云。
	乃得「諸素」。
是謂「埃氏篩」之術也。

施「埃氏篩」於一百。書之。

---

(program
  (statement
    (function_statement
      (function_define_statement
        (INT_NUM
          (INT_NUM_KEYWORDS))
        (name_single_statement
          (IDENTIFIER))
        (INT_NUM
          (INT_NUM_KEYWORDS))
        (TYPE)
        (IDENTIFIER)
        (statement
          (define_statement
            (declare_statement
              (INT_NUM
                (INT_NUM_KEYWORDS))
              (TYPE))
            (name_multi_statement
              (IDENTIFIER))))
        (statement
          (for_statement
            (for_enum_statement
              (FOR_START_ENUM)
              (IDENTIFIER)
              (FOR_MID_ENUM)
              (statement
                (array_statement
                  (array_push_statement
                    (IDENTIFIER)
                    (PREPOSITION_RIGHT)
                    (data
                      (BOOL_VALUE)))))
              (FOR_IF_END))))
        (statement
          (math_statement
            (mod_math_statement
              (IDENTIFIER)
              (preposition
                (PREPOSITION_RIGHT))
              (INT_NUM
                (INT_NUM_KEYWORDS)))
            (name_multi_statement
              (IDENTIFIER))))
        (statement
          (define_statement
            (init_define_statement
              (TYPE)
              (data
                (INT_NUM
                  (INT_NUM_KEYWORDS)))
              (name_single_statement
                (IDENTIFIER)))))
        (statement
          (for_statement
            (for_while_statement
              (FOR_START_WHILE)
              (statement
                (if_statement
                  (IF)
                  (if_expression
                    (binary_if_expression
                      (unary_if_expression
                        (data
                          (IDENTIFIER)))
                      (IF_LOGIC_OP)
                      (unary_if_expression
                        (data
                          (IDENTIFIER)))))
                  (statement
                    (BREAK))
                  (FOR_IF_END)))
              (statement
                (define_statement
                  (init_define_statement
                    (TYPE)
                    (data
                      (INT_NUM
                        (INT_NUM_KEYWORDS)))
                    (name_single_statement
                      (IDENTIFIER)))))
              (statement
                (for_statement
                  (for_while_statement
                    (FOR_START_WHILE)
                    (statement
                      (if_statement
                        (IF)
                        (if_expression
                          (binary_if_expression
                            (unary_if_expression
                              (data
                                (IDENTIFIER)))
                            (IF_LOGIC_OP)
                            (unary_if_expression
                              (data
                                (IDENTIFIER)))))
                        (statement
                          (BREAK))
                        (FOR_IF_END)))
                    (statement
                      (math_statement
                        (arith_math_statement
                          (arith_binary_math
                            (ARITH_BINARY_OP)
                            (data
                              (IDENTIFIER))
                            (preposition
                              (PREPOSITION_RIGHT))
                            (data
                              (IDENTIFIER))))
                        (name_multi_statement
                          (IDENTIFIER))))
                    (statement
                      (if_statement
                        (IF)
                        (if_expression
                          (binary_if_expression
                            (unary_if_expression
                              (data
                                (IDENTIFIER)))
                            (IF_LOGIC_OP)
                            (unary_if_expression
                              (data
                                (IDENTIFIER)))))
                        (statement
                          (assign_statement
                            (IDENTIFIER)
                            (IDENTIFIER)
                            (data
                              (BOOL_VALUE))))
                        (ELSE)
                        (statement
                          (BREAK))
                        (FOR_IF_END)))
                    (statement
                      (math_statement
                        (arith_math_statement
                          (arith_binary_math
                            (ARITH_BINARY_OP)
                            (data
                              (INT_NUM
                                (INT_NUM_KEYWORDS)))
                            (preposition
                              (PREPOSITION_RIGHT))
                            (data
                              (IDENTIFIER))))))
                    (statement
                      (assign_statement
                        (IDENTIFIER)))
                    (FOR_IF_END))))
              (statement
                (math_statement
                  (arith_math_statement
                    (arith_binary_math
                      (ARITH_BINARY_OP)
                      (data
                        (INT_NUM
                          (INT_NUM_KEYWORDS)))
                      (preposition
                        (PREPOSITION_RIGHT))
                      (data
                        (IDENTIFIER))))))
              (statement
                (assign_statement
                  (IDENTIFIER)))
              (FOR_IF_END))))
        (statement
          (define_statement
            (declare_statement
              (INT_NUM
                (INT_NUM_KEYWORDS))
              (TYPE))
            (name_multi_statement
              (IDENTIFIER))))
        (statement
          (assign_statement
            (IDENTIFIER)
            (data
              (INT_NUM
                (INT_NUM_KEYWORDS)))))
        (statement
          (for_statement
            (for_while_statement
              (FOR_START_WHILE)
              (statement
                (if_statement
                  (IF)
                  (if_expression
                    (binary_if_expression
                      (unary_if_expression
                        (data
                          (IDENTIFIER)))
                      (IF_LOGIC_OP)
                      (unary_if_expression
                        (IDENTIFIER))))
                  (statement
                    (BREAK))
                  (FOR_IF_END)))
              (statement
                (reference_statement
                  (data
                    (IDENTIFIER))
                  (IDENTIFIER)
                  (name_single_statement
                    (IDENTIFIER))))
              (statement
                (if_statement
                  (IF)
                  (if_expression
                    (unary_if_expression
                      (data
                        (IDENTIFIER))))
                  (statement
                    (array_statement
                      (array_push_statement
                        (IDENTIFIER)
                        (PREPOSITION_RIGHT)
                        (data
                          (IDENTIFIER)))))
                  (FOR_IF_END)))
              (statement
                (math_statement
                  (arith_math_statement
                    (arith_binary_math
                      (ARITH_BINARY_OP)
                      (data
                        (INT_NUM
                          (INT_NUM_KEYWORDS)))
                      (preposition
                        (PREPOSITION_RIGHT))
                      (data
                        (IDENTIFIER))))))
              (statement
                (assign_statement
                  (IDENTIFIER)))
              (FOR_IF_END))))
        (statement
          (return_statement
            (data
              (IDENTIFIER))))
        (IDENTIFIER))))
  (statement
    (function_statement
      (function_call_statement
        (function_pre_call
          (IDENTIFIER)
          (preposition
            (PREPOSITION_LEFT))
          (data
            (INT_NUM
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)))))))
  (statement
    (print_statement)))
