test/corpus/tree.txt
==========
畫樹
==========

吾嘗觀「「畫譜」」之書。方悟「備紙」「擇筆」「蘸色」「落筆」「運筆」「提筆」「裱畫」之義。
吾嘗觀「「算經」」之書。方悟「正弦」「餘弦」「半圓周率」之義。

吾有一術。名之曰「畫樹法」。欲行是術。必先得一物。曰「紙」。
五數。曰「東」曰「南」曰「長」曰「粗」曰「向」。是術曰。

	施「餘弦」於「向」。乘其以「長」。加其以「東」。名之曰「末東」
	施「正弦」於「向」。乘其以「長」。減其於「南」。名之曰「末南」

	施「擇筆」於「紙」於「粗」。

	施「落筆」於「紙」於「東」於「南」。
	施「運筆」於「紙」於「末東」於「末南」。
	施「提筆」於「紙」。

	加「向」以零又三分。名之曰「左向」。
	減「向」以零又三分。名之曰「右向」。
	乘「長」以零又八分。名之曰「枝長」。
	乘「粗」以零又八分。名之曰「枝粗」。

	若「枝長」小於五者。乃歸空無也。

	施「畫樹法」於「紙」。於「末東」。於「末南」。於「枝長」。於「枝粗」。於「左向」。
	施「畫樹法」於「紙」。於「末東」。於「末南」。於「枝長」。於「枝粗」。於「右向」。

是謂「畫樹法」之術也。


施「備紙」於二百五十六。於二百五十六。名之曰「紙」。
施「蘸色」於「紙」於「「黑」」。
施「畫樹法」於「紙」。於一百二十八。於二百五十六。於五十。於五。於「半圓周率」。
施「裱畫」於「紙」於「「out」」

---

(program
  (statement
    (import_statement
      (STRING_LITERAL)
      (IDENTIFIER)
      (IDENTIFIER)
      (IDENTIFIER)
      (IDENTIFIER)
      (IDENTIFIER)
      (IDENTIFIER)
      (IDENTIFIER)))
  (statement
    (import_statement
      (STRING_LITERAL)
      (IDENTIFIER)
      (IDENTIFIER)
      (IDENTIFIER)))
  (statement
    (function_statement
      (function_define_statement
        (INT_NUM
          (INT_NUM_KEYWORDS))
        (name_single_statement
          (IDENTIFIER))
        (ERROR
          (INT_NUM
            (INT_NUM_KEYWORDS))
          (IDENTIFIER))
        (INT_NUM
          (INT_NUM_KEYWORDS))
        (TYPE)
        (IDENTIFIER)
        (IDENTIFIER)
        (IDENTIFIER)
        (IDENTIFIER)
        (IDENTIFIER)
        (statement
          (function_statement
            (function_call_statement
              (function_pre_call
                (IDENTIFIER)
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))))))
        (statement
          (math_statement
            (arith_math_statement
              (arith_binary_math
                (ARITH_BINARY_OP)
                (preposition
                  (PREPOSITION_RIGHT))
                (data
                  (IDENTIFIER))))))
        (statement
          (math_statement
            (arith_math_statement
              (arith_binary_math
                (ARITH_BINARY_OP)
                (preposition
                  (PREPOSITION_RIGHT))
                (data
                  (IDENTIFIER))))
            (name_multi_statement
              (IDENTIFIER))))
        (statement
          (function_statement
            (function_call_statement
              (function_pre_call
                (IDENTIFIER)
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))))))
        (statement
          (math_statement
            (arith_math_statement
              (arith_binary_math
                (ARITH_BINARY_OP)
                (preposition
                  (PREPOSITION_RIGHT))
                (data
                  (IDENTIFIER))))))
        (statement
          (math_statement
            (arith_math_statement
              (arith_binary_math
                (ARITH_BINARY_OP)
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))))
            (name_multi_statement
              (IDENTIFIER))))
        (statement
          (function_statement
            (function_call_statement
              (function_pre_call
                (IDENTIFIER)
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))))))
        (statement
          (function_statement
            (function_call_statement
              (function_pre_call
                (IDENTIFIER)
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))))))
        (statement
          (function_statement
            (function_call_statement
              (function_pre_call
                (IDENTIFIER)
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))))))
        (statement
          (function_statement
            (function_call_statement
              (function_pre_call
                (IDENTIFIER)
                (preposition
                  (PREPOSITION_LEFT))
                (data
                  (IDENTIFIER))))))
        (statement
          (math_statement
            (arith_math_statement
              (arith_binary_math
                (ARITH_BINARY_OP)
                (data
                  (IDENTIFIER))
                (preposition
                  (PREPOSITION_RIGHT))
                (data
                  (FLOAT_NUM
                    (INT_NUM
                      (INT_NUM_KEYWORDS))
                    (INT_NUM
                      (INT_NUM_KEYWORDS))
                    (FLOAT_NUM_KEYWORDS)))))
            (name_multi_statement
              (IDENTIFIER))))
        (statement
          (math_statement
            (arith_math_statement
              (arith_binary_math
                (ARITH_BINARY_OP)
                (data
                  (IDENTIFIER))
                (preposition
                  (PREPOSITION_RIGHT))
                (data
                  (FLOAT_NUM
                    (INT_NUM
                      (INT_NUM_KEYWORDS))
                    (INT_NUM
                      (INT_NUM_KEYWORDS))
                    (FLOAT_NUM_KEYWORDS)))))
            (name_multi_statement
              (IDENTIFIER))))
        (statement
          (math_statement
            (arith_math_statement
              (arith_binary_math
                (ARITH_BINARY_OP)
                (data
                  (IDENTIFIER))
                (preposition
                  (PREPOSITION_RIGHT))
                (data
                  (FLOAT_NUM
                    (INT_NUM
                      (INT_NUM_KEYWORDS))
                    (INT_NUM
                      (INT_NUM_KEYWORDS))
                    (FLOAT_NUM_KEYWORDS)))))
            (name_multi_statement
              (IDENTIFIER))))
        (statement
          (math_statement
            (arith_math_statement
              (arith_binary_math
                (ARITH_BINARY_OP)
                (data
                  (IDENTIFIER))
                (preposition
                  (PREPOSITION_RIGHT))
                (data
                  (FLOAT_NUM
                    (INT_NUM
                      (INT_NUM_KEYWORDS))
                    (INT_NUM
                      (INT_NUM_KEYWORDS))
                    (FLOAT_NUM_KEYWORDS)))))
            (name_multi_statement
              (IDENTIFIER))))
        (statement
          (if_statement
            (IF)
            (if_expression
              (binary_if_expression
                (unary_if_expression
                  (data
                    (IDENTIFIER)))
                (IF_LOGIC_OP)
                (unary_if_expression
                  (data
                    (INT_NUM
                      (INT_NUM_KEYWORDS))))))
            (ERROR)
            (statement
              (function_statement
                (function_call_statement
                  (function_pre_call
                    (IDENTIFIER)
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))))))
            (statement
              (function_statement
                (function_call_statement
                  (function_pre_call
                    (IDENTIFIER)
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))
                    (preposition
                      (PREPOSITION_LEFT))
                    (data
                      (IDENTIFIER))))))
            (FOR_IF_END
              (MISSING "云云"))))
        (IDENTIFIER))))
  (statement
    (function_statement
      (function_call_statement
        (function_pre_call
          (IDENTIFIER)
          (preposition
            (PREPOSITION_LEFT))
          (data
            (INT_NUM
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)))
          (preposition
            (PREPOSITION_LEFT))
          (data
            (INT_NUM
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)))))
      (name_single_statement
        (IDENTIFIER))))
  (statement
    (function_statement
      (function_call_statement
        (function_pre_call
          (IDENTIFIER)
          (preposition
            (PREPOSITION_LEFT))
          (data
            (IDENTIFIER))
          (preposition
            (PREPOSITION_LEFT))
          (data
            (STRING_LITERAL))))))
  (statement
    (function_statement
      (function_call_statement
        (function_pre_call
          (IDENTIFIER)
          (preposition
            (PREPOSITION_LEFT))
          (data
            (IDENTIFIER))
          (preposition
            (PREPOSITION_LEFT))
          (data
            (INT_NUM
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)))
          (preposition
            (PREPOSITION_LEFT))
          (data
            (INT_NUM
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)))
          (preposition
            (PREPOSITION_LEFT))
          (data
            (INT_NUM
              (INT_NUM_KEYWORDS)
              (INT_NUM_KEYWORDS)))
          (preposition
            (PREPOSITION_LEFT))
          (data
            (INT_NUM
              (INT_NUM_KEYWORDS)))
          (preposition
            (PREPOSITION_LEFT))
          (data
            (IDENTIFIER))))))
  (statement
    (function_statement
      (function_call_statement
        (function_pre_call
          (IDENTIFIER)
          (preposition
            (PREPOSITION_LEFT))
          (data
            (IDENTIFIER))
          (preposition
            (PREPOSITION_LEFT))
          (data
            (STRING_LITERAL)))))))